  an ELF constructor, the process is now terminated.  Previously, the
  dynamic loader would return NULL from dlopen, with the lazy binding error
  captured in a dlerror message.  In general, this is unsafe because
  resetting the stack in an arbitrary function call is not possible.

Changes to build and runtime requirements:

  [Add changes to build and runtime requirements here]

Security related changes:

  CVE-2019-19126: ld.so failed to ignore the LD_PREFER_MAP_32BIT_EXEC
  environment variable during program execution after a security
  transition, allowing local attackers to restrict the possible mapping
  addresses for loaded libraries and thus bypass ASLR for a setuid
  program.  Reported by Marcin Kościelnicki.

The following bugs are resolved with this release:

  [The release manager will add the list generated by
  scripts/list-fixed-bugs.py just before the release.]


Version 2.30

Major new features:

* Unicode 12.1.0 Support: Character encoding, character type info, and
  transliteration tables are all updated to Unicode 12.1.0, using
  generator scripts contributed by Mike FABIAN (Red Hat).

* The dynamic linker accepts the --preload argument to preload shared
  objects, in addition to the LD_PRELOAD environment variable.

* The twalk_r function has been added.  It is similar to the existing
  twalk function, but it passes an additional caller-supplied argument
  to the callback function.

* On Linux, the getdents64, gettid, and tgkill functions have been added.

* Minguo (Republic of China) calendar support has been added as an
  alternative calendar for the following locales: zh_TW, cmn_TW, hak_TW,
  nan_TW, lzh_TW.

* The entry for the new Japanese era has been added for ja_JP locale.

* Memory allocation functions malloc, calloc, realloc, reallocarray, valloc,
  pvalloc, memalign, and posix_memalign fail now with total object size
  larger than PTRDIFF_MAX.  This is to avoid potential undefined behavior with