@@ -1,5 +1,5 @@
-/* Copyright (C) 1995-2019 Free Software Foundation, Inc.
-   This file is part of the GNU C Library.
+/* Wrapper header for <sys/syscall.h>.  Linux version.
+   Copyright (C) 2019 Free Software Foundation, Inc.
 
    The GNU C Library is free software; you can redistribute it and/or
    modify it under the terms of the GNU Lesser General Public
@@ -13,19 +13,17 @@
 
    You should have received a copy of the GNU Lesser General Public
    License along with the GNU C Library; if not, see
-   <https://www.gnu.org/licenses/>.  */
+   <http://www.gnu.org/licenses/>.  */
 
 #ifndef _SYSCALL_H
-#define _SYSCALL_H	1
 
-/* This file should list the numbers of the system calls the system knows.
-   But instead of duplicating this we use the information available
-   from the kernel sources.  */
-#include <asm/unistd.h>
+#ifdef _ISOMAC
+# include <sysdeps/unix/sysv/linux/sys/syscall.h>
+#else /* !_ISOMAC */
+/* Use the built-in system call list, not <asm/unistd.h>, which may
+   not list all the system call numbers we need.  */
+# define _SYSCALL_H
+# include <arch-syscall.h>
+#endif /* !_ISOMAC */
 
-/* The Linux kernel header file defines macros __NR_*, but some
-   programs expect the traditional form SYS_*.  <bits/syscall.h>
-   defines SYS_* macros for __NR_* macros of known names.  */
-#include <bits/syscall.h>
-
-#endif
+#endif /* _SYSCALL_H */
